--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,15 +1,17 @@
-body {
-  font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 0;
-}
-
 .main-div {
-  width: 100vw;
-  height: 100vh;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  max-width: 1px;
+  padding: 0;
   background-color: aquamarine;
 }
 
-.login-main {
+.form label {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
   margin-top: 80px;
   width: 60vw;
   height: 60vh;
@@ -19,12 +21,7 @@ body {
   display: inline-block;
 }
 
-.input  {
-  margin-top: 10vh;
-  margin-left: 8vw;
-}
-
-button {
+.form button {
   margin-top: 7vh;
   margin-left: 26vw;
   background: orange;
