--- a/src/components/Forms/Login/Login.module.css
+++ b/src/components/Forms/Login/Login.module.css
@@ -1,4 +1,4 @@
-.main-div {
+.form {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -13,12 +13,8 @@
   top: -9999px;
   left: -9999px;
   margin-top: 80px;
-  width: 60vw;
-  height: 60vh;
-  border: 15px solid green;
   margin-left: 15vw;
   background-color: #D5CABD;
-  display: inline-block;
 }
 
 .form button {
