remove async fxn

--- a/src/components/views/Home/Home.css
+++ b/src/components/views/Home/Home.css
@@ -1,6 +1,9 @@
+main {
+  background: url("https://unsplash.com/photos/Q5G6rsv373U") no-repeat center center fixed;
+}
+
 .hero {
   align-items: center;
-  background: url("https://unsplash.com/photos/Q5G6rsv373U/800x600") no-repeat center center fixed;
   background-size: cover;
   display: flex;
   height: 300px;
