--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,29 @@
 body {
   font-family: 'Rubik', sans-serif;
-  font-size: 20px;
   margin: 0 auto;
   max-width: 375px;
   padding: 1rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
 }
 
 li {
   list-style-type: none;
 }
 
+form,
+table {
+  margin: 0 0.5rem;
+}
+
 form {
   border: solid thin #333;
+  padding: 0.5rem;
+}
+
+table {
+  padding: 1rem;
 }
 
 button {
@@ -20,7 +32,8 @@ button {
 
 button:focus,
 button:hover {
-  outline-color: blue;
+  cursor: pointer;
+  outline: none;
 }
 
 .container {
