--- a/src/components/Forms/Filters/Filters.module.css
+++ b/src/components/Forms/Filters/Filters.module.css
@@ -1,6 +1,6 @@
 .form {
   display: flex;
-  flex-direction: column;
-  height: 8rem;
+  flex-direction: center;
+  height: 10rem;
   justify-content: space-evenly;
 }
