--- a/src/components/views/Home/Home.css
+++ b/src/components/views/Home/Home.css
@@ -5,8 +5,8 @@
 
 .hero {
   align-items: center;
-  background-size: cover;
+  background-size: auto;
   display: flex;
-  height: 300px;
+  height: 400px;
   justify-content: center;
 }
