move views components into folder and add additional css

--- a/src/components/views/Home/Home.css
+++ b/src/components/views/Home/Home.css
@@ -3,6 +3,12 @@
   border: thin solid purple;
 }
 
+h1 {
+  color: brown;
+  display: flex;
+
+}
+
 .hero {
   align-items: center;
   background-size: auto;
