--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,14 @@ form {
   padding: 9vw 5vh;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 80vh;
+  width: 30vw;
+  margin: 10px;
 }
 
 table {
   display: inline;
   padding: 1rem;
+  margin: 46rem;
 }
 
 th {
