change products rreturn statement to render equipment

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   font-family: 'Rubik', sans-serif;
   margin: 0 auto;
   max-width: 375px;
@@ -55,5 +55,4 @@ button:hover {
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-}
-
+} */
