--- a/src/components/FilterableProductTable/ProductTable/ProductTable.css
+++ b/src/components/FilterableProductTable/ProductTable/ProductTable.css
@@ -1,4 +1,4 @@
-table {
+/* table {
   border: solid thin blue;
   border-spacing: 4rem;
   margin: 46rem;
@@ -15,4 +15,4 @@ tbody td {
 
 .fave {
   text-align: center;
-}
+} */
