--- a/src/components/Footer/Footer.modules.css
+++ b/src/components/Footer/Footer.modules.css
@@ -1,6 +1,7 @@
-.footer {
-  background: orange;
+/* footer {
+  background: #318EAB;
   display: flex;
   justify-content: center;
   justify-content: space-evenly;
-}
+  padding: 2rem;
+} */
