--- a/src/components/views/About/About.css
+++ b/src/components/views/About/About.css
@@ -1,16 +1,13 @@
-.pic {
-  background: url("https://images.unsplash.com/photo-1534398079543-7ae6d016b86a?ixlib=rb-1.2.1&auto=format&fit=crop&w=2050&q=90") no-repeat center center fixed;
+h1,
+h2 {
+  display: flex;
+  justify-content: center;
+  color: #005B93;
 }
 
-.hero {
-  align-items: center;
-  background-size: auto;
-  display: flex;
-  height: 400px;
-  justify-content: center;
+p {
+  /* display: flex; */
+  /* justify-content: center; */
+  align-items: flex-end;
+  font-size: 1.2em;
 }
-/*
-.text {
-  display: flex;
-  align-items: center;
-} */
