--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,17 +1,17 @@
 button:not(.plain) {
   border-radius: 0.25rem;
-  color: lavenderblush;
+  color: #318EAB;
   padding: 0.375rem 0.75rem;
   transition: background-color 0.15s ease-in-out;
 }
 
 .plain {
   background-color: transparent;
-  color: #333;
+  color: black
 }
 
 .primary {
-  background-color: blue;
+  background-color: #318EAB;
 }
 
 .primary:hover {
