--- a/src/components/Forms/Filters/Filters.module.css
+++ b/src/components/Forms/Filters/Filters.module.css
@@ -1,6 +1,6 @@
-/* .form {
+.form {
   display: flex;
-  flex-direction: center;
-  height: 10rem;
+  flex-direction: column;
+  height: 8rem;
   justify-content: space-evenly;
-} */
+}
