--- a/src/index.css
+++ b/src/index.css
@@ -1,47 +1,52 @@
-/* body {
+body {
   font-family: 'Rubik', sans-serif;
+  background: url("https://images.unsplash.com/photo-1534398079543-7ae6d016b86a?ixlib=rb-1.2.1&auto=format&fit=crop&w=2050&q=80") no-repeat center center fixed;
   margin: 0 auto;
-  max-width: 375px;
-  padding: 1rem;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 20px;
-  display: flex;
+  /* -moz-osx-font-smoothing: grayscale; */
+  font-size: 19px;
   flex-direction: column;
   align-items: center;
 }
 
-li {
-  list-style-type: none;
+li{
 }
 
 form,
 table {
-  margin: 0 0.5rem;
-  display: flex;
-}
-
-form {
-  border: solid orange;
-  padding: 9vw 5vh;
-  display: flex;
-  flex-direction: column;
-  width: 30vw;
-  margin: 10px;
+  padding: 0.8rem;
+  border: solid #318EAB;
+  margin: 22px 44.5rem;
 }
 
 table {
   display: inline;
-  padding: 1rem;
+  padding: 0.6rem;
   margin: 46rem;
 }
 
-th {
+form {
+  display: flex;
+  flex-direction: column;
+  width: 45vw;
+  margin-top: 10px;
+}
 
+th {
+  border: solid black;
+}
+
+/* tr {
+  figure out where table rows are
+  border: solid black;
+} */
+
+tbody td {
+  border-bottom: solid black;
 }
 
 button {
-  border: none;
+  border-color: #318EAB;
 }
 
 button:focus,
@@ -52,7 +57,8 @@ button:hover {
 
 .container {
   margin: 0 auto;
-  max-width: 1200px;
+  max-height: 2200px;
+  max-width: 2200px;
   display: flex;
   flex-direction: column;
-} */
+}
