--- a/src/components/FilterableProductTable/FilterableProductTable.css
+++ b/src/components/FilterableProductTable/FilterableProductTable.css
@@ -1,5 +1,7 @@
-.main {
-  align-items: center;
-  display: flex;
-  justify-content: center;
+form,
+table {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: solid #318eab;
+  margin: 22px 44.5rem;
+  padding: 0.8rem;
 }
