--- a/src/components/Forms/Filters/Filters.module.css
+++ b/src/components/Forms/Filters/Filters.module.css
@@ -1,6 +1,10 @@
-.form {
+form {
   display: flex;
   flex-direction: column;
-  height: 8rem;
-  justify-content: space-evenly;
+  width: 45vw;
+  margin-top: 10px;
+}
+
+input {
+  border-radius: 3px;
 }
