--- a/src/components/views/About/About.css
+++ b/src/components/views/About/About.css
@@ -1,13 +1,7 @@
-h1,
-h2 {
-  display: flex;
-  justify-content: center;
-  color: #005B93;
-}
-
-p {
-  /* display: flex; */
-  /* justify-content: center; */
-  align-items: flex-end;
-  font-size: 1.2em;
+main {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 3px;
+  margin: 0 auto;
+  padding: 1rem;
+  width: 45rem;
 }
