--- a/src/components/Forms/Input/Input.css
+++ b/src/components/Forms/Input/Input.css
@@ -2,6 +2,12 @@ div {
   margin: 0.25rem 0;
 }
 
-label {
+.label {
   margin-right: 0.5rem;
+}
+
+.hiddenLabel {
+  left: -9999px;
+  position: absolute;
+  top: -9999px;
 }
